# hyperparallel

./: Cargo.toml  README.md
examples/: monte_carlo.rs
examples/monte_carlo/: main.rs
src/: lib.rs
src/data_pipes/: base.rs  mod.rs
src/data_pipes/channel/: in_channel.rs  mod.rs  out_channel.rs
src/data_pipes/common_heap/: mod.rs
src/processes/: base.rs  data_flow.rs  data_sink.rs  data_source.rs  mod.rs
src/runner/: fn_list.rs  mod.rs  runner_builder.rs
