[package]
name = "hyperparallel"
version = "0.1.0"
edition = "2021"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
heapless = "0.7.16"
itertools = "0.11.0"

[dev-dependencies]
fastrand = "2.0.0"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1